--- a/src/main/webapp/fmaj_final2.html
+++ b/src/main/webapp/fmaj_final2.html
@@ -26,7 +26,8 @@
 	rel="shortcut icon" type="image/x-icon">
 <!-- css -->
 <link href="./css/style2.css" rel="stylesheet" type="text/css">
-
+<script>
+</script>
 </head>
 <body>
 
@@ -44,87 +45,93 @@
 				<div class="buttons">
 					<div class="Employers">Employers</div>
 					<div class="About">About</div>
-					<div class="BookDemo" ><a href="https://calendly.com/useforward/demo-meeting?month=2023-03">Book Demo</a>
+					<div class="BookDemo">
+						<a
+							href="https://calendly.com/useforward/demo-meeting?month=2023-03">Book
+							Demo</a>
 					</div>
 				</div>
 			</div>
 		</div>
 
 		<!-- part1 -->
-			<div class="part1">
-				<div class="part1_buttons">
-					<div class="part1_button1">
-						<div class="v73_39"></div>
-						<span class="BookDemo1"><a href="https://calendly.com/useforward/demo-meeting?month=2023-03">Book Demo</a>
-						</span>
-					</div>
-					<div class="part1_button2 margin0">
-						<div class="v73_42"></div>
-						<span class="LearnMore">Learn More</span>
-					</div>
+		<div class="part1">
+			<div class="part1_buttons">
+				<div class="part1_button1">
+					<div class="v73_39"></div>
+					<span class="BookDemo1"><a
+						href="https://calendly.com/useforward/demo-meeting?month=2023-03">Book
+							Demo</a> </span>
 				</div>
-
+				<div class="part1_button2 margin0">
+					<div class="v73_42"></div>
+					<span class="LearnMore">Learn More</span>
+				</div>
 			</div>
+
+		</div>
 
 		<!-- part2 -->
 		<div class="part2"></div>
 
 		<!-- part3 -->
 		<div class="part3"></div>
-		
+
 		<!-- part4 -->
 		<div class="part4"></div>
 
 
-		<!-- footer -->
+<!-- footer -->
 		<div class="footer">
-		<div class="footer1"></div>
-		 
-		   <div class="footer2">
-			    <div class="footer_text">
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    </div>
-		  </div>
+			<div class="footer1"></div>
 
-
-
-
-
-</div>
+			<div class="footer2">
+				<div class="footer_text">
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Quick Links
+								<ul>
+									<li style="cursor: pointer;"
+					onclick="location.href='fmaj_final2.html';"
+									>Employers</li>
+									<li style="cursor: pointer;"
+					onclick="location.href='about.html';">About</li>
+									<li><a
+										href="https://calendly.com/useforward/demo-meeting?month=2023-03">
+											Book Demo</a></li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Social
+								<ul>
+									<li>LinkedIn</li>
+									<li>&nbsp;</li>
+									<li>&nbsp;</li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Others
+								<ul>
+									<li>Privacy Policy</li>
+									<li>Terms of Use</li>
+									<li>&nbsp;</li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-
 
 
 
