--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -26,7 +26,6 @@
 	rel="shortcut icon" type="image/x-icon">
 <!-- css -->
 <link href="./css/about.css" rel="stylesheet" type="text/css">
-
 </head>
 <body>
 
@@ -35,91 +34,203 @@
 
 		<!-- navbar -->
 		<div class="navbar">
-			<div class="nav">
+			<nav class="nav">
 				<!-- logo -->
-				<div class="logo">
+				<div class="logo" style="cursor: pointer;"
+					onclick="location.href='fmaj_final2.html';">
 					<img src="./images/Forward.svg" alt="logo">
 				</div>
 				<!-- buttons -->
 				<div class="buttons">
-					<div class="Employers">Employers</div>
+					<div class="Employers" 
+					style="cursor: pointer;"
+					onclick="location.href='fmaj_final2.html';">
+					Employers</div>
 					<div class="About">About</div>
-					<div class="BookDemo">Book Demo</div>
+					<div class="BookDemo"><a
+							href="https://calendly.com/useforward/demo-meeting?month=2023-03">Book
+							Demo</a></div>
+				</div>
+			</nav>
+		</div>
+
+
+		<!-- part1 -->
+		<div class="part1">
+
+			<!-- 큰박1 -->
+			<div class="p1_b1">
+				<!--큰박2 -->
+				<div class="p1_b2">
+					<!-- 텍스트 -->
+					<div class="p1_s1">
+						<p style="font-size: 60px;">
+							Forward is a<br>Journey.
+						</p>
+						<img src="./images/about/line.svg" alt="Line">
+						<div>
+							It’s a journey for job seekers on a quest to find a place where
+							they<br> belong.<br> <br> Its a journey for
+							businesses searching for a new addition to their<br>
+							ever-growing family.<br> <br> And it’s a journey for
+							us, who are trying to create a world where<br> these two can
+							find each other, as fairly and stress-free as possible.
+						</div>
+					</div>
+					<!-- 사진 -->
+					<div class="p1_s2">
+						<img src="./images/about/part1.svg" alt="part1">
+					</div>
 				</div>
 			</div>
 		</div>
 
 
-		<!-- part1 -->
-		<div class="part1"> </div>
 		<!-- part2 -->
-		<div class="part2"> 
-		<img src="./images/about/person.svg" alt="persons">
+		<div class="part2">
+			<!-- 텍스트 -->
+			<div class="p1_s1">
+				<p style="margin-bottom: 30px;">Our Story</p>
+				<img src="./images/about/line.svg" alt="Line">
+				<div>
+					Our journey began with a deep-seated frustration over the<br>
+					inadequacy of existing job hunting resources and a lack of clarity<br>
+					regarding our position in the job market.<br> <br> The
+					current hiring landscape suffers from a shortage of skilled<br>
+					talent, an number of applicants, and a time-<br> consuming
+					recruitment process.<br> <br> We recognized the gap
+					between the needs of companies and the<br> resources available
+					to job seekers. We set out to bridge this gap by<br> providing
+					a platform that offers comprehensive support to job<br>
+					seekers while also meeting the needs of companies and<br>
+					recruiters.
+				</div>
+			</div>
 		</div>
-		
-		
-		
+		<!-- part3 -->
+		<div class="part3">
+			<!-- 큰박스 -->
+			<div class="p3_b">
+				<p style="margin-bottom: 30px;">Our Team</p>
+				<img src="./images/about/line.svg" alt="Line">
+
+
+				<!-- 작은박스1 -->
+				<div class="p3_s" style="float: left;">
+					<!-- 사진+텍스트 -->
+					<div class="p3_s1">
+						<img src="./images/about/per1.svg" alt="per">
+						<div class="intro">
+							<div class="intro_sub">
+								<div>Chinmay Rathod</div>
+								<div>Co-Founder & CEO</div>
+							</div>
+						</div>
+					</div>
+					<!-- 사진+텍스트 -->
+					<div class="p3_s1">
+						<img src="./images/about/per2.svg" alt="per">
+						<div class="intro">
+							<div class="intro_sub">
+								<div>Gautham Narayanan</div>
+								<div>Co-Founder & COO</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- 작은박스2 -->
+				<div class="p3_s" style="float: left;">
+					<!-- 사진+텍스트 -->
+					<div class="p3_s1">
+						<img src="./images/about/per3.svg" alt="per">
+						<div class="intro">
+							<div class="intro_sub">
+								<div>Trique Nguyen</div>
+								<div>Fullstack Eng.</div>
+							</div>
+						</div>
+					</div>
+					<!-- 사진+텍스트 -->
+					<div class="p3_s1">
+						<img src="./images/about/per4.svg" alt="per">
+						<div class="intro">
+							<div class="intro_sub">
+								<div>Peter Pham</div>
+								<div>Research & AI</div>
+							</div>
+						</div>
+					</div>
+					<!-- 사진+텍스트 -->
+					<div class="p3_s1">
+						<img src="./images/about/per5.svg" alt="per">
+						<div class="intro">
+							<div class="intro_sub">
+								<div>Auni Bagchi</div>
+								<div>Research & AI</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+			</div>
+		</div>
 
 
 		<!-- footer -->
 		<div class="footer">
-		<div class="footer1"></div>
-		 
-		   <div class="footer2">
-			    <div class="footer_text">
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    	<div class="footer_part"> <!-- part1 -->
-				      <ol>
-				        <li>Quick Links
-				          <ul>
-				            <li>Employers</li>
-				            <li>About</li>
-				            <li>Book Demo</li>
-				          </ul>
-				        </li>
-				      </ol>
-				     </div>
-			    </div>
-		  </div>
+			<div class="footer1"></div>
+
+			<div class="footer2">
+				<div class="footer_text">
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Quick Links
+								<ul>
+									<li style="cursor: pointer;"
+					onclick="location.href='fmaj_final2.html';"
+									>Employers</li>
+									<li style="cursor: pointer;"
+					onclick="location.href='about.html';">About</li>
+									<li><a
+										href="https://calendly.com/useforward/demo-meeting?month=2023-03">
+											Book Demo</a></li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Social
+								<ul>
+									<li>LinkedIn</li>
+									<li>&nbsp;</li>
+									<li>&nbsp;</li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+					<div class="footer_part">
+						<!-- part1 -->
+						<ol>
+							<li>Others
+								<ul>
+									<li>Privacy Policy</li>
+									<li>Terms of Use</li>
+									<li>&nbsp;</li>
+								</ul>
+							</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
-
-
-
-</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
